[gd_scene load_steps=4 format=3 uid="uid://cy7mol6j4jwxw"]

[ext_resource type="Theme" uid="uid://b80glpgan4anq" path="res://resources/mvp_resources/mvp_theme.tres" id="1_cxh5r"]
[ext_resource type="Script" uid="uid://b6cx8fpeuymsv" path="res://scripts/apps/app_music/song_comment_ui.gd" id="2_navp4"]
[ext_resource type="Texture2D" uid="uid://dqbvedt3pnbqr" path="res://assets/images/avatars/avatar_aki224.png" id="3_navp4"]

[node name="SongCommentUI" type="HBoxContainer"]
offset_right = 440.0
offset_bottom = 112.0
scale = Vector2(0.272601, 0.23988885)
size_flags_vertical = 0
theme = ExtResource("1_cxh5r")
script = ExtResource("2_navp4")

[node name="UserAvatar" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_navp4")
stretch_mode = 4

[node name="TextCol" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="TextCol"]
layout_mode = 2

[node name="UserName" type="Label" parent="TextCol/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Aki"
vertical_alignment = 1

[node name="TimeStamp" type="Label" parent="TextCol/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "00:00"
vertical_alignment = 1

[node name="Content" type="Label" parent="TextCol"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Content"
